[gd_scene load_steps=32 format=2]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://scenes/level1.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/gui-background.png" type="Texture" id=3]
[ext_resource path="res://assets/gui-instructions.png" type="Texture" id=4]
[ext_resource path="res://fonts/Arial_dynamic_smaller.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/gui-start-contagion.png" type="Texture" id=6]
[ext_resource path="res://assets/gui-start-contagion-over.png" type="Texture" id=7]
[ext_resource path="res://scripts/Play.gd" type="Script" id=8]
[ext_resource path="res://audioogg/click.ogg" type="AudioStream" id=9]
[ext_resource path="res://audioogg/elevator-button.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/gui-abort-contagion.png" type="Texture" id=11]
[ext_resource path="res://assets/gui-abort-contagion-over.png" type="Texture" id=12]
[ext_resource path="res://assets/gui-dino-select-front.png" type="Texture" id=13]
[ext_resource path="res://assets/gui-dino-select-front-selected.png" type="Texture" id=14]
[ext_resource path="res://assets/gui-dino-select-front-over.png" type="Texture" id=15]
[ext_resource path="res://assets/gui-dino-select-front-disabled.png" type="Texture" id=16]
[ext_resource path="res://assets/gui-dino-select-left.png" type="Texture" id=17]
[ext_resource path="res://assets/gui-dino-select-left-selected.png" type="Texture" id=18]
[ext_resource path="res://assets/gui-dino-select-left-over.png" type="Texture" id=19]
[ext_resource path="res://assets/gui-dino-select-left-disabled.png" type="Texture" id=20]
[ext_resource path="res://assets/gui-dino-select-right.png" type="Texture" id=21]
[ext_resource path="res://assets/gui-dino-select-right-selected.png" type="Texture" id=22]
[ext_resource path="res://assets/gui-dino-select-right-over.png" type="Texture" id=23]
[ext_resource path="res://assets/gui-dino-select-right-disabled.png" type="Texture" id=24]
[ext_resource path="res://assets/gui-dino-select-back.png" type="Texture" id=25]
[ext_resource path="res://assets/gui-dino-select-back-selected.png" type="Texture" id=26]
[ext_resource path="res://assets/gui-dino-select-back-over.png" type="Texture" id=27]
[ext_resource path="res://assets/gui-dino-select-back-disabled.png" type="Texture" id=28]
[ext_resource path="res://audioogg/loop_edit_mode_2.ogg" type="AudioStream" id=29]
[ext_resource path="res://audioogg/error.ogg" type="AudioStream" id=30]
[ext_resource path="res://audioogg/loop_play_mode.ogg" type="AudioStream" id=31]

[node name="game" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="principal" parent="." instance=ExtResource( 2 )]
position = Vector2( 330, 462.965 )
scale = Vector2( 0.328037, 0.328037 )

[node name="UI" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1307.0
margin_right = 1880.0
margin_bottom = 1040.0
__meta__ = {
"_edit_group_": true,
"_edit_vertical_guides_": [ 1350.0 ]
}

[node name="background" type="NinePatchRect" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -570.0
texture = ExtResource( 3 )
patch_margin_left = 30
patch_margin_top = 30
patch_margin_right = 30
patch_margin_bottom = 30

[node name="instructions" type="Control" parent="UI"]
margin_left = 60.0
margin_top = 700.0
margin_right = 520.0
margin_bottom = 1030.0
rect_pivot_offset = Vector2( 230, 150 )

[node name="paper" type="NinePatchRect" parent="UI/instructions"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -245.0
margin_top = -185.0
margin_right = 245.0
margin_bottom = 185.0
rect_rotation = -1.5
rect_pivot_offset = Vector2( 241.978, 170.054 )
texture = ExtResource( 4 )
patch_margin_left = 100
patch_margin_top = 100
patch_margin_right = 100
patch_margin_bottom = 100

[node name="Label" type="Label" parent="UI/instructions"]
margin_left = 30.0
margin_top = 40.0
margin_right = 440.0
margin_bottom = 290.0
rect_rotation = -1.29195
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.0666667, 0.121569, 0.419608, 1 )
text = "· Press \"Start contagion\" to start transmitting the flu.
· Select a dinosaur above and click a square on the office's floor to place it.
· Click on a placed dinosaur to remove it.
· Dinosaurs cannot be rotated.
· Blue shirt dinosaurs cannot be removed.
· Make your way to Infect the boss!"
autowrap = true

[node name="play" type="TextureButton" parent="UI"]
margin_left = 60.0
margin_top = 470.0
margin_right = 512.0
margin_bottom = 676.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
script = ExtResource( 8 )

[node name="musiquita_play" type="AudioStreamPlayer" parent="UI/play"]
stream = ExtResource( 31 )
volume_db = -15.0

[node name="musiquita" type="AudioStreamPlayer" parent="UI/play"]
stream = ExtResource( 29 )
volume_db = -15.0
autoplay = true

[node name="abort" type="TextureButton" parent="UI"]
visible = false
margin_left = 60.0
margin_top = 470.0
margin_right = 512.0
margin_bottom = 676.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )
script = ExtResource( 8 )

[node name="DinoSelector_1" type="Control" parent="UI"]
margin_left = 60.0
margin_top = 40.0
margin_right = 270.0
margin_bottom = 270.0
rect_pivot_offset = Vector2( 100, 120 )
__meta__ = {
"_edit_group_": true
}

[node name="post_it" type="TextureButton" parent="UI/DinoSelector_1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.5
margin_top = -112.5
margin_right = 106.5
margin_bottom = 112.5
toggle_mode = true
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 15 )
texture_disabled = ExtResource( 16 )

[node name="square" type="Polygon2D" parent="UI/DinoSelector_1"]
position = Vector2( 160, 140 )
scale = Vector2( 1.33333, 1.33333 )
color = Color( 0.21875, 0.191406, 0.191406, 1 )
polygon = PoolVector2Array( 0, 30, 30, 30, 30, 0, 0, 0 )

[node name="counter" type="Label" parent="UI/DinoSelector_1"]
margin_left = 160.0
margin_top = 140.0
margin_right = 200.0
margin_bottom = 180.0
custom_fonts/font = ExtResource( 5 )
text = "9"
align = 1
valign = 1
autowrap = true

[node name="DinoSelector_2" type="Control" parent="UI"]
margin_left = 290.0
margin_top = 40.0
margin_right = 500.0
margin_bottom = 270.0
rect_pivot_offset = Vector2( 100, 120 )
__meta__ = {
"_edit_group_": true
}

[node name="post_it" type="TextureButton" parent="UI/DinoSelector_2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.5
margin_top = -112.5
margin_right = 106.5
margin_bottom = 112.5
toggle_mode = true
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 19 )
texture_disabled = ExtResource( 20 )

[node name="square" type="Polygon2D" parent="UI/DinoSelector_2"]
position = Vector2( 160, 140 )
scale = Vector2( 1.33333, 1.33333 )
color = Color( 0.21875, 0.191406, 0.191406, 1 )
polygon = PoolVector2Array( 0, 30, 30, 30, 30, 0, 0, 0 )

[node name="counter" type="Label" parent="UI/DinoSelector_2"]
margin_left = 160.0
margin_top = 140.0
margin_right = 200.0
margin_bottom = 180.0
custom_fonts/font = ExtResource( 5 )
text = "9"
align = 1
valign = 1
autowrap = true

[node name="DinoSelector_3" type="Control" parent="UI"]
margin_left = 60.0
margin_top = 250.0
margin_right = 270.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( 100, 120 )
__meta__ = {
"_edit_group_": true
}

[node name="post_it" type="TextureButton" parent="UI/DinoSelector_3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.5
margin_top = -112.5
margin_right = 106.5
margin_bottom = 112.5
toggle_mode = true
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 23 )
texture_disabled = ExtResource( 24 )

[node name="square" type="Polygon2D" parent="UI/DinoSelector_3"]
position = Vector2( 160, 140 )
scale = Vector2( 1.33333, 1.33333 )
color = Color( 0.21875, 0.191406, 0.191406, 1 )
polygon = PoolVector2Array( 0, 30, 30, 30, 30, 0, 0, 0 )

[node name="counter" type="Label" parent="UI/DinoSelector_3"]
margin_left = 160.0
margin_top = 140.0
margin_right = 200.0
margin_bottom = 180.0
custom_fonts/font = ExtResource( 5 )
text = "9"
align = 1
valign = 1
autowrap = true

[node name="DinoSelector_4" type="Control" parent="UI"]
margin_left = 290.0
margin_top = 250.0
margin_right = 500.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( 100, 120 )
__meta__ = {
"_edit_group_": true
}

[node name="post_it" type="TextureButton" parent="UI/DinoSelector_4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.5
margin_top = -112.5
margin_right = 106.5
margin_bottom = 112.5
toggle_mode = true
texture_normal = ExtResource( 25 )
texture_pressed = ExtResource( 26 )
texture_hover = ExtResource( 27 )
texture_disabled = ExtResource( 28 )

[node name="square" type="Polygon2D" parent="UI/DinoSelector_4"]
position = Vector2( 160, 140 )
scale = Vector2( 1.33333, 1.33333 )
color = Color( 0.21875, 0.191406, 0.191406, 1 )
polygon = PoolVector2Array( 0, 30, 30, 30, 30, 0, 0, 0 )

[node name="counter" type="Label" parent="UI/DinoSelector_4"]
margin_left = 160.0
margin_top = 140.0
margin_right = 200.0
margin_bottom = 180.0
custom_fonts/font = ExtResource( 5 )
text = "9"
align = 1
valign = 1
autowrap = true

[node name="SFX_click" type="AudioStreamPlayer" parent="UI"]
stream = ExtResource( 9 )
volume_db = -10.0

[node name="SFX_error" type="AudioStreamPlayer" parent="UI"]
stream = ExtResource( 30 )
volume_db = -10.0

[node name="popups" type="Node2D" parent="."]
z_index = 2

[node name="Bip" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true
[connection signal="button_down" from="UI/play" to="UI/play" method="_on_play_button_down"]
[connection signal="pressed" from="UI/abort" to="UI/play" method="_on_abort_pressed"]
[connection signal="toggled" from="UI/DinoSelector_1/post_it" to="." method="_on_dinoFront_toggled"]
[connection signal="toggled" from="UI/DinoSelector_2/post_it" to="." method="_on_dinoLeft_toggled"]
[connection signal="toggled" from="UI/DinoSelector_3/post_it" to="." method="_on_dinoRight_toggled"]
[connection signal="toggled" from="UI/DinoSelector_4/post_it" to="." method="_on_dinoBack_toggled"]
